--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,6 @@ jobs:
       run: echo "Minime-OZ test!"
     - name: Run a multi-line script
       run: |
-        npm install
-        yarn dev
+        yarn install
+        yarn release
+        echo "Done!"
