--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "vega": "^5.7.2",
-    "vega-lite": "4.0.0-beta.0",
-    "vega-embed": "4.2.2"
+    "vega-lite": "^3.4.0",
+    "vega-embed": "^4.2.2",
+    "vega-tooltip": "^0.18.1"
   },
   "devDependencies": {
     "http-server": "^0.11.1",
